<resources>
    <string name="app_name">Quiz App</string>
    <string name="name">Name</string>
    <string name="first">1. Which of the following dogs is the smallest?</string>
    <string name="Poodle">Poodle</string>
    <string name="Pomeranian">Pomeranian</string>
    <string name="Chihuahua">Chihuahua</string>
    <string name="Dachshund">Dachshund</string>
    <string name="second">2. What color are zebras?</string>
    <string name="zebra1">White with black stripes.</string>
    <string name="zebra2">Black with white stripes.</string>
    <string name="zebra3">Both of the above.</string>
    <string name="zebra4">None of the above.</string>
    <string name="third">3. What existing bird has the largest wingspan?</string>
    <string name="Albatross">Albatross</string>
    <string name="Stork">Stork</string>
    <string name="Swan">Swan</string>
    <string name="Condor">Condor</string>
    <string name="fourth">4. What is the biggest animal that has ever lived?</string>
    <string name="bluewhale">Blue whale</string>
    <string name="africanelephant">African elephant</string>
    <string name="hippo">Hippo</string>
    <string name="dolphin">Dolphin</string>
    <string name="fifth">5. What pets do more families own?</string>
    <string name="birds">Birds</string>
    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>
    <string name="horses">Horses</string>
    <string name="emailonly">Email Only</string>
    <string name="emailscore">Email Score</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="scored">out of 5</string>
    <string name="score">5</string>
    <string name="resetbutton">Reset</string>
    <string name="dogorcat">Are you a dog or cat person ?</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="start">Ready to start</string>
    <string name="startGAME">START</string>
    <string name="show">Show name with score</string>
</resources>
